Fri Sep 24 14:51:28 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_other_tests.lst:
          Disabled test for bug 2777 in static builds.

Fri Sep 24 14:19:37 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_2777_Regression/run_test.pl:

          Fixed a bug in the perl script: $p is an array-ref.

Fri Sep 24 14:07:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Changed some generated includes because of changes in CIAO

        * TAO_IDL/be/be_util.cpp:
          Fixed some small issues when really using the ciao_container_type
          option

        * docs/compiler.html:
          Updated name of new option

Fri Sep 24 13:44:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Also make the generated includes dependent on the container type

Fri Sep 24 13:40:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/releasenotes/ftrt_ec.html:
        * docs/tutorials/Quoter/Event_Service/index.html:
        * docs/tutorials/Quoter/Naming_Service/index.html:
        * docs/tutorials/Quoter/RT_Event_Service/index.html:
          Some updates regarding ORB services rename action

Fri Sep 24 13:12:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_provides.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
        * TAO_IDL/be/be_visitor_component/component_svh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svs.cpp:
        * TAO_IDL/be/be_visitor_component/context_ex_idl.cpp:
        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp: